package NYT.NChunkServer.NProto;

import "yt/core/misc/guid.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqUpdateChunkProperties
{
    message TUpdate
    {
        required NYT.NProto.TGuid chunk_id = 1;
        optional int32 replication_factor = 2;
        optional bool vital = 3;
    }

    repeated TUpdate updates = 1;
}

////////////////////////////////////////////////////////////////////////////////

